--- a/experiment/goldminers/texts.yaml
+++ b/experiment/goldminers/texts.yaml
@@ -1,26 +1,25 @@
 ---
 welcome: |
   Welcome to Planet Teeb!
-  You're here to collect precious gems.
+  You are here to collect precious gems.
 instructions: |
-  Congratulations! You've just arrived on Planet Teeb. You're here to collect precious gems, but you do not yet know which gems are more valuable than others. After arriving, you seek out a trainer who can teach you which gems are worth more than others. Pay close attention to the instructions you receive from your trainer, as it will help you to find the most valuable gems in the game.
+  Congratulations! You have just arrived on Planet Teeb. You are a space explorer who has traveled here to collect precious gems, but you do not know which gems are more valuable than others.
 
-  {response_text}
+  After arriving, you seek out a teacher who can teach you which gems are worth more than others. Pay close attention to the instructions you get from your teacher, as it will help you to find the most valuable gems in the game.
 
-training_title: Here is how to tell the difference between cheap and expensive gems.
+  Press the SPACEBAR to read the teacher's instructions.
+
+training_title: The difference between cheap and expensive gems.
 training: |
-  {trainer_instructions}
+  {training_instructions}
+  Your teacher offers to take you to a nearby quarry to find some gems. The teacher will show you a few gems to look at. You have to click on the one you think is the most valuable. Then the teacher will show you the value of the one you clicked, and the values of the ones you did not click. Your goal is to learn for yourself how to tell the most expensive gem on each trial.
 
-  The trainer offers to take you to a nearby quarry to find some gems. The trainer will give you a few of gems to look at. You have to click on the one you think is the most valuable. The trainer will show you the value of the one you clicked, and the values of the ones you did not click. Your goal is to learn to select the most valuable gem on each trial.
-
-  {response_text}
-
+  Click on the more valuable gem to continue. If you do not know which gem is more valuable, reread the instructions above. If you do not understand the instructions above, please ask for help from the researcher.
 training_instructions:
   orientation: |
-    The trainer tells you that the difference between cheap and expensive gems is determined by the orientation of the stripes. Look at the two gems pictured below and see if you can tell their difference in orientation. The gem on the right is the more valuable gem.
+    Your teacher tells you that the difference between cheap and expensive gems is determined by the orientation of the stripes. Look at the two gems pictured below and see if you can tell their difference in orientation. The gem on the right is the more valuable gem.
   frequency: |
-    The trainer tells you that the difference between cheap and expensive gems is determined by the width of the stripes. Look at the two gems pictured below and see if you can tell their difference in stripe width. The gem on the right is the more valuable gem.
-
+    Your teacher tells you that the difference between cheap and expensive gems is determined by the width of the stripes. Look at the two gems pictured below and see if you can tell their difference in stripe width. The gem on the right is the more valuable gem.
 test: |
   Your training is complete! Now you are ready to strike out on your own, to different quarries all over the planet. Without your trainer to help you, you will only know the value of the gem you select, and not the values of the gems you do not select. But your goal is the same: to select the most valuable gem on each trial.
 
@@ -29,6 +28,6 @@ test: |
 end: |
   Your ship is full of gems and you are ready to fly home. Thanks for visiting Planet Teeb!
 
-  You've completed the experiment. After you exit this screen, a survey will open in the web browser. Please complete the survey. After you complete the survey you can leave.
+  You have completed the experiment. After you exit this screen, a survey will open in the web browser. Please complete the survey. After you complete the survey you can leave.
 
   Press the SPACEBAR to exit this screen, and open the survey.
