--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bots"]
 	path = bots
-	url = git@github.com:pedmiston/mountain-climbers.git
+	url = git@github.com:pedmiston/gems-bots.git
