Use new gems environment

--- a/.environment
+++ b/.environment
@@ -1,3 +1,2 @@
 #!/usr/bin/env bash
-export PYTHONPATH=~/PhD/gems/bots:$PYTHONPATH
-source ~/.venvs/peaks/bin/activate
+source ~/.venvs/gems/bin/activate
