Add window for experiment to tmux session

--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -6,9 +6,15 @@ windows:
       panes:
         - source .environment && git status && inv -l
         - source .environment && cd data && git status
-        - cd experiment && source .environment && git status
+        - cd experiment && source .environment && git status && inv -l
   - inherited-diversity.Rmd:
       layout: main-vertical
       panes:
         - cd docs && vim inherited-diversity.Rmd
         - cd docs && ls
+  - experiment:
+      layout: even-horizontal
+      root: ~/PhD/gems/experiment
+      panes:
+        - source .environment && git status && inv -l
+        - source .environment && vim .
