--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -8,7 +8,7 @@ windows:
         - source .environment && git status && inv -l
         - source .environment && cd data && git status
         - cd experiment && source .environment && git status && inv -l
-  - inherited-diversity.Rmd:
+  - doc:
       layout: main-vertical
       panes:
         - cd docs && vim inherited-diversity.Rmd
